fix fonts + done nav

--- a/Homepage.html
+++ b/Homepage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>X-Lotl &mdash; Главная страница</title>
     <!-- <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.css"> -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="fonts/fonts.css">
     <link rel="stylesheet" href="lamp.css">
     <link rel="stylesheet" href="header.css">
@@ -27,15 +27,17 @@
     <!-- Навигационная-панель -->
     <section class="nav-flex">
         <nav id="main-nav">
-            <a href="#" class="nav-element selected-nav">Все потоки</a>
-            <a href="#" class="nav-element">Разработка</a>
-            <a href="#" class="nav-element">Администрирование</a>
-            <a href="#" class="nav-element">Дизайн</a>
-            <a href="#" class="nav-element">Менеджмент</a>
-            <a href="#" class="nav-element">Маркетинг</a>
-            <a href="#" class="nav-element">Научпоп</a>
-
-            <div id="login-axolotl"><img src="img/axolotl2.png"></div>
+            <div class="div-nav">
+                <a href="#" class="nav-element selected-nav">Все потоки</a>
+                <a href="#" class="nav-element"><span class="nav-text">Разработка</span></a>
+                <a href="#" class="nav-element"><span class="nav-text">Администрирование</span></a>
+                <a href="#" class="nav-element"><span class="nav-text">Дизайн</span></a>
+                <a href="#" class="nav-element"><span class="nav-text">Менеджмент</span></a>
+                <a href="#" class="nav-element"><span class="nav-text">Маркетинг</span></a>
+                <a href="#" class="nav-element"><span class="nav-text">Научпоп</span></a>
+            </div>
+            
+            <div id="login-axolotl"><img src="img/ProfileIcon.png"></div>
         </nav>
     </section>
 
