--- a/Homepage.html
+++ b/Homepage.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <title>X-Lotl &mdash; Главная страница</title>
     <!-- <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.css"> -->
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="fonts/fonts.css">
     <link rel="stylesheet" href="lamp.css">
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="nav.css">
+    <link rel="stylesheet" href="modal.css">
 </head>
 <body>
     <!-- Заголовок -->
@@ -53,8 +54,39 @@
     </footer>
 
     <!-- Модалка авторизации -->
-    <section id="authorize-modal hidden">
+    <section id="authorize-modal" class="my-modal hidden">
+        <div>
+            <div class="close-modal">x</div>
 
+            <img src="img/hi.png" width="253">
+            <h1>Привет!</h1>
+
+            <div class="warning"><input type="text" class="modal-input" placeholder="Имя пользователя" style="margin-top: 10px;"></div>
+            <input type="password" class="modal-input" placeholder="Пароль" style="margin-top: 30px;">
+
+            <h4 class="modal-danger" style="margin-top: 10px;">Неправильный логин или пароль!</h4>
+
+            <button class="modal-button" style="margin-top: 40px;">Войти</button>
+            <div id="link-wrapper"><a href="#" id="register-link">Новенький тут? Зарегистрироваться</a></div>
+        </div>
+    </section>
+
+    <section id="register-modal" class="my-modal">
+        <div>
+            <div class="close-modal">x</div>
+
+            <img src="img/read.png" width="253">
+            <h1>Давайте с Вами познакомимся!</h1>
+
+            <input type="text" class="modal-input" placeholder="Имя пользователя" style="margin-top: 10px;">
+            <div class="warning"><input type="password" class="modal-input" placeholder="Пароль" style="margin-top: 20px;"></div>
+            <div class="warning"><input type="password" class="modal-input" placeholder="Повторите пароль" style="margin-top: 20px;"></div>
+
+            <h4 class="modal-danger" style="margin-top: 10px;">Пароли не совпадают!</h4>
+
+            <button class="modal-button" style="margin-top: 10px; font-size: 34px;">Зарегистрироваться</button>
+            <div id="link-wrapper"><a href="#" id="register-link">Новенький тут? Зарегистрироваться</a></div>
+        </div>
     </section>
 
     <script src="homepage.js"></script>
