--- a/Homepage.html
+++ b/Homepage.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="fonts/fonts.css">
     <link rel="stylesheet" href="lamp.css">
-    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="header_footer.css">
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="modal.css">
 </head>
@@ -48,11 +48,6 @@
         <section></section>
     </main>
 
-    <!-- Футер -->
-    <footer>
-
-    </footer>
-
     <!-- Модалка авторизации -->
     <section id="authorize-modal" class="my-modal hidden">
         <div>
@@ -71,7 +66,7 @@
         </div>
     </section>
 
-    <section id="register-modal" class="my-modal">
+    <section id="register-modal" class="my-modal hidden">
         <div>
             <div class="close-modal">x</div>
 
@@ -85,9 +80,14 @@
             <h4 class="modal-danger" style="margin-top: 10px;">Пароли не совпадают!</h4>
 
             <button class="modal-button" style="margin-top: 10px; font-size: 34px;">Зарегистрироваться</button>
-            <div id="link-wrapper"><a href="#" id="register-link">Новенький тут? Зарегистрироваться</a></div>
+            <div id="link-wrapper"><a href="#" id="login-link">Назад к логину</a></div>
         </div>
     </section>
+
+    <!-- Футер -->
+    <footer id="basement">
+        <span>WebDev Team &#8251; 2021</span>
+    </footer>
 
     <script src="homepage.js"></script>
 </body>
