--- a/post.html
+++ b/post.html
@@ -50,11 +50,10 @@
                 <section id="image-section"><img src="img/testArticle.png"></section>
                 <section id="title">
                     <div class="main-section">
-                        <p class="title">Название:</p>
-                        <h2>Большой заголовок - отличный заголовок или почему большой заголовок смотрится так хорошо</h2>
+                        <h2>Мы не знаем что это такое если бы мы знали что это такое мы не знаем что это такое</h2>
                     </div>
                     <div class="author-section">
-                        <p class="middle-text">Статья написана &DarkAngel<br><date>08.11.2021</date></p>
+                        <p class="middle-text">Статья написана в <time>18:45</time><br><date>08.11.2021</date></p>
                     </div>
                 </section>
             </section>
