--- a/post.html
+++ b/post.html
@@ -99,7 +99,7 @@
             <section id="comment-list">
                 <div class="comment">
                     <div class="comment-header">
-                        &MrShurukan <b>·</b> <date>08.11.2021</date> <b>·</b> 20:49
+                        &MrShurukan <b>&middot;</b> <date>08.11.2021</date> <b>&middot;</b> 20:49
                     </div>
                     <div class="comment-content">
                         <div class="comment-avatar"><img src="img/ProfileIcon.png" width="80"></div>
@@ -109,7 +109,7 @@
 
                 <div class="comment">
                     <div class="comment-header">
-                        &vladimirlisovskij <b>·</b> <date>08.11.2021</date> <b>·</b> 21:33
+                        &vladimirlisovskij <b>&middot;</b> <date>08.11.2021</date> <b>&middot;</b> 21:33
                     </div>
                     <div class="comment-content">
                         <div class="comment-avatar"><img src="img/ProfileIcon.png" width="80"></div>
