--- a/Homepage.html
+++ b/Homepage.html
@@ -35,13 +35,13 @@
     <section class="nav-flex">
         <nav id="main-nav">
             <div class="div-nav">
-                <a href="#" class="nav-element selected-nav">Все потоки</a>
-                <a href="#" class="nav-element"><span class="nav-text">Разработка</span></a>
-                <a href="#" class="nav-element"><span class="nav-text">Администрирование</span></a>
-                <a href="#" class="nav-element"><span class="nav-text">Дизайн</span></a>
-                <a href="#" class="nav-element"><span class="nav-text">Менеджмент</span></a>
-                <a href="#" class="nav-element"><span class="nav-text">Маркетинг</span></a>
-                <a href="#" class="nav-element"><span class="nav-text">Научпоп</span></a>
+                <a href="#" class="nav-element" :class="{'selected-nav': selectedType == 0}" @click="selectedType = 0">Все потоки</a>
+                <a href="#" class="nav-element" :class="{'selected-nav': selectedType == 1}" @click="selectedType = 1"><span class="nav-text">Разработка</span></a>
+                <a href="#" class="nav-element" :class="{'selected-nav': selectedType == 2}" @click="selectedType = 2"><span class="nav-text">Администрирование</span></a>
+                <a href="#" class="nav-element" :class="{'selected-nav': selectedType == 3}" @click="selectedType = 3"><span class="nav-text">Дизайн</span></a>
+                <a href="#" class="nav-element" :class="{'selected-nav': selectedType == 4}" @click="selectedType = 4"><span class="nav-text">Менеджмент</span></a>
+                <a href="#" class="nav-element" :class="{'selected-nav': selectedType == 5}" @click="selectedType = 5"><span class="nav-text">Маркетинг</span></a>
+                <a href="#" class="nav-element" :class="{'selected-nav': selectedType == 6}" @click="selectedType = 6"><span class="nav-text">Научпоп</span></a>
             </div>
             
             
@@ -93,55 +93,21 @@
 
         <!-- Основной поток блога -->
         <section class="content-article">
-            <!-- 1 пункт -->
-            <div class="content-clause">
+            <div class="content-clause" v-for="article in articles">
                 <!-- Автор и дата статьи -->
-                <span class="clause-author">&DarkAngel &middot; <date>08.11.2021</date></span>
+                <span class="clause-author">&{{ article.authorName }} &middot; <date>{{ b(article.date.getDate()) }}.{{ b(article.date.getMonth() + 1) }}.{{ b(article.date.getFullYear()) }}</date></span>
                 <figcaption>
                     <!-- Картинка статьи -->
-                    <img src="img/testArticle.png">
+                    <img v-bind:src="article.image">
                     <div class="content-description-wrapper">
                         <!-- Заголовок пункта -->
-                        <div class="content-head">Мы не знаем что это такое если бы мы знали что это такое мы не знаем что это такое</div>
+                        <div class="content-head">{{ article.title }}</div>
                         <!-- Описание пункта -->
                         <div class="content-description">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                            Ipsum dolor sit amet consectetur adipiscing elit ut. 
-                            Morbi tincidunt ornare massa eget egestas purus viverra accumsan. Volutpat sed cras ornare arcu dui. 
-                            Quam nulla porttitor massa id neque aliquam vestibulum morbi blandit. Amet mauris commodo quis imperdiet massa. 
-                            Dui vivamus arcu felis bibendum ut. Purus faucibus ornare suspendisse sed nisi lacus sed. 
-                            Quam quisque id diam vel quam. Ac feugiat sed lectus vestibulum. Urna nec tincidunt praesent semper feugiat nibh sed pulvinar. 
-                            Purus in massa tempor nec feugiat nisl pretium. Accumsan in nisl nisi scelerisque. 
-                            Sed vulputate mi sit amet mauris commodo quis.....
+                            {{ article.content }}
                         </div>
                         <!-- Ссылка в Сибирь -->
-                        <div class="content-link"><a href="file:///C:/Users/dark1/OneDrive/Рабочий%20стол/X-LOTL/projectAnhedonia-front/post.html">Читать дальше в источнике... &rArr;</a></div>
-                    </div>
-                </figcaption>
-            </div>
-            <!-- 2 пункт -->
-            <div class="content-clause">
-                <!-- Автор и дата статьи -->
-                <span class="clause-author">&MrShurukan &middot; <date>06.11.2021</date></span>
-                <figcaption>
-                    <!-- Картинка статьи -->
-                    <img src="img/void.jpg">
-                    <div class="content-description-wrapper">
-                        <!-- Заголовок пункта -->
-                        <div class="content-head">Книга «{Вы пока еще не знаете JS} Область видимости и замыкания. 2-е межд. издание» </div>
-                        <!-- Описание пункта -->
-                        <div class="content-description">
-                            Вы пока еще не знаете JS. 
-                            И Кайл Симпсон признается, что тоже его не знает (по крайней мере полностью)… 
-                            И никто не знает. Но все мы можем начать работать над тем, чтобы узнать его лучше. 
-                            Сколько бы времени вы ни провели за изучением языка, всегда можно найти что-то еще, что стоит изучить и понять на другом уровне. 
-                            Вы уже прочитали «Познакомьтесь, JavaScript»? 
-                            Тогда откройте вторую книгу серии «Вы пока еще не знаете JS», 
-                            чтобы познакомиться поближе с первым из трех столпов JavaScript — системой областей видимости и функциональными замыканиями, 
-                            а также с мощным паттерном проектирования «Модуль». 
-                        </div>
-                        <!-- Ссылка в Сибирь -->
-                        <div class="content-link"><a href="#">Читать дальше в источнике... &rArr;</a></div>
+                        <div class="content-link"><a v-bind:href="article.articleUrl">Читать дальше в источнике... &rArr;</a></div>
                     </div>
                 </figcaption>
             </div>
